# blitzpool-server-rust

./: .dockerignore  .gitignore  CUSTOM-EXTRANONCE-API.md  Cargo.toml  Dockerfile  README.md  UPSTREAM_DEPS.md  blitzpool.example.toml  rust-toolchain.toml
crates/bp-api/: Cargo.toml
crates/bp-api/src/: email_hooks.rs  error.rs  lib.rs  push_hooks.rs  response_cache.rs  state.rs  time_range.rs  utils.rs
crates/bp-api/tests/: custom_extranonce_guard.rs  smoke.rs
crates/bp-bitcoin/: Cargo.toml
crates/bp-bitcoin/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
crates/bp-bitcoin/tests/: regtest_block_header.rs
crates/bp-blockparty-engine/: Cargo.toml
crates/bp-blockparty-engine/src/: api.rs  cache.rs  error.rs  hooks.rs  invitation.rs  lib.rs  service.rs  util.rs
crates/bp-blockparty-engine/tests/: invitation.rs  regtest_blockparty_lifecycle.rs  regtest_blockparty_pending_guard.rs  service.rs
crates/bp-coinbase-snapshot/: Cargo.toml
crates/bp-coinbase-snapshot/src/: budget.rs  ledger.rs  lib.rs  snapshot.rs
crates/bp-common/: Cargo.toml
crates/bp-common/src/: extranonce.rs  lib.rs  sqlx_impls.rs
crates/bp-config/: Cargo.toml
crates/bp-config/src/: lib.rs
crates/bp-db/: Cargo.toml
crates/bp-db/migrations/: 0001_add_pplns_group_reset_round_on_block.sql  0002_add_pplns_group_max_members.sql  0003_add_redis_state_backup.sql  0004_add_client_channel_count.sql  0005_add_pplns_group_payout_mode.sql  0006_add_address_ownership_verification.sql  0007_add_blockparty_join_link.sql  0008_add_blockparty_confirmation_requested.sql  0009_add_custom_extranonce.sql
crates/bp-db/src/: address.rs  address_ownership.rs  block.rs  blockparty.rs  client.rs  custom_extranonce.rs  email.rs  external.rs  group.rs  lib.rs  notification.rs  pool.rs  pool_stats.rs  pplns.rs  redis_backup.rs  stats_writes.rs
crates/bp-db/tests/: best_difficulty_tracker_writes.rs  block_writes.rs  client_writes_integration.rs  email_verification_cleanup.rs  group_bulk_writes.rs  group_member_kick_writes.rs  group_mgmt_writes.rs  pool_worker_rows.rs  pool_workers_by_slot.rs  pplns_bulk_writes.rs  push_subscription_cleanup.rs  stats_writes_integration.rs  telegram_subscription_writes.rs  total_miners_count.rs
crates/bp-geoip/: Cargo.toml
crates/bp-geoip/src/: client.rs  config.rs  error.rs  lib.rs  service.rs
crates/bp-group-mgmt/: Cargo.toml
crates/bp-group-mgmt-engine/: Cargo.toml
crates/bp-group-mgmt-engine/src/: cache.rs  cron.rs  email_hooks.rs  error.rs  hooks.rs  invitation.rs  join_request.rs  lib.rs  service.rs  util.rs
crates/bp-group-mgmt-engine/tests/: group_service.rs  invitation_service.rs  join_request_service.rs
crates/bp-group-mgmt/src/: constants.rs  group.rs  invitation.rs  join_request.rs  lib.rs  token.rs
crates/bp-group-solo-engine/: Cargo.toml
crates/bp-group-solo-engine/src/: config.rs  distribution.rs  engine.rs  error.rs  hooks.rs  lib.rs  reader.rs  reset.rs  sweep.rs
crates/bp-group-solo-engine/tests/: distribution_integration.rs  engine_integration.rs  ledger_integration.rs  regtest_group_solo_block_submit.rs  reset_integration.rs  round_integration.rs  stream_equivalence.rs  sweep_integration.rs
crates/bp-inflight-cache/: Cargo.toml
crates/bp-inflight-cache/src/: lib.rs
crates/bp-job-declaration/: Cargo.toml
crates/bp-job-declaration/src/: config.rs  error.rs  handle.rs  lib.rs  message.rs  worker.rs
crates/bp-job-declaration/tests/: regtest_e2e.rs
crates/bp-metrics/: Cargo.toml
crates/bp-metrics/src/: config.rs  constants.rs  error.rs  lib.rs  recorder.rs  service.rs
crates/bp-metrics/tests/: exporter_e2e.rs
crates/bp-mining-job/: Cargo.toml
crates/bp-mining-job/src/: address.rs  bip141.rs  bip54.rs  cache.rs  coinbase.rs  header.rs  lib.rs  merkle.rs
crates/bp-mining-job/tests/: regtest_bip54.rs  regtest_e2e.rs
crates/bp-mining-mode/: Cargo.toml
crates/bp-mining-mode/src/: debouncer.rs  lib.rs  reader.rs  resolver.rs  result.rs
crates/bp-notifications/: Cargo.toml
crates/bp-notifications/src/: lib.rs
crates/bp-pplns/: Cargo.toml
crates/bp-pplns-engine/: Cargo.toml
crates/bp-pplns-engine/src/: autoscale.rs  config.rs  distribution.rs  engine.rs  error.rs  hooks.rs  lib.rs  reader.rs  sweep.rs
crates/bp-pplns-engine/tests/: distribution_integration.rs  engine_integration.rs  ledger_integration.rs  regtest_pplns_block_submit.rs  regtest_split_e2e.rs  snapshot_cross_version.rs  stream_equivalence.rs  sweep_integration.rs  window_integration.rs
crates/bp-pplns/src/: distribution.rs  lib.rs  weight.rs
crates/bp-pplns/tests/: regtest_budget_autoscale.rs  regtest_multi_stream_spike.rs  regtest_trimmer.rs
crates/bp-regtest-harness/: Cargo.toml
crates/bp-regtest-harness/src/: config.rs  error.rs  lib.rs  node.rs  rpc.rs
crates/bp-regtest-harness/tests/: regtest_smoke.rs
crates/bp-session-persistence/: Cargo.toml
crates/bp-session-persistence/src/: address_settings_cache.rs  client_row.rs  config.rs  engine.rs  error.rs  hashrate_sampler.rs  hooks.rs  lib.rs  touch_buffer.rs
crates/bp-session-persistence/tests/: engine_integration.rs
crates/bp-share/: Cargo.toml
crates/bp-share-hook/: Cargo.toml
crates/bp-share-hook/src/: lib.rs
crates/bp-share-stats-sink/: Cargo.toml
crates/bp-share-stats-sink/src/: config.rs  engine.rs  error.rs  flush.rs  hooks.rs  lib.rs  reader.rs  seed.rs
crates/bp-share-stats-sink/tests/: engine_integration.rs  flush_integration.rs  hooks_unit.rs  seed_integration.rs  spec_ports.rs
crates/bp-share-stream/: Cargo.toml
crates/bp-share-stream/src/: lib.rs  runner.rs
crates/bp-share/proptest-regressions/: lib.txt
crates/bp-share/src/: lib.rs
crates/bp-stats/: Cargo.toml
crates/bp-stats/src/: buffer.rs  constants.rs  health.rs  lib.rs  slot.rs
crates/bp-stratum-v1/: Cargo.toml
crates/bp-stratum-v1/benches/: notify.rs  parse.rs
crates/bp-stratum-v1/src/: client.rs  config.rs  error.rs  frame.rs  hooks.rs  jobs.rs  lib.rs  notify.rs  server.rs  shared_adapter.rs  submit.rs
crates/bp-stratum-v2/: Cargo.toml
crates/bp-test-support/: Cargo.toml
(+408 files in other folders)
