# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "bp-coinbase-snapshot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Domain types shared by the coinbase distribution snapshot.
bp-common = { workspace = true }
bp-pplns = { workspace = true }
# DbError, wrapped by the shared LedgerError.
bp-db = { workspace = true }

# Serde derives so the snapshot can ride inside the block-found event.
serde = { workspace = true }
# Redis-backed snapshot persistence.
redis = { workspace = true }
# sqlx::Error variant on the shared LedgerError.
sqlx = { workspace = true }

# Observability + errors
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Async test runtime for the Redis-backed budget persistence tests.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
