[package]
name = "bp-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
# Enables `sqlx::Type/Decode/Encode` impls for Postgres on the newtypes.
# Off by default so consumers that don't need the DB layer don't pull in sqlx.
sqlx = ["dep:sqlx"]

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
