[package]
name = "bp-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Typed schema + TOML loader. No env-var fallback layer — the TOML
# file is the single source of truth; operators either copy
# `blitzpool.example.toml` from the repo or keep their config in
# `.local/blitzpool.toml`.
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
