[package]
name = "bp-group-mgmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bp-common = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
