[package]
name = "bp-job-declaration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bitcoin_core_sv2 = { workspace = true }
stratum-core = { workspace = true }
bitcoin = { workspace = true }
async-channel = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bp-regtest-harness = { workspace = true }
tokio = { workspace = true }
