[package]
name = "bp-mining-job"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bp-common = { workspace = true }
bp-share = { workspace = true }
bitcoin = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
bp-test-support = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
bp-regtest-harness = { workspace = true }
bp-template-distribution = { workspace = true }
