[package]
name = "bp-mining-mode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bp-common = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
