[package]
name = "bp-pplns-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal — pure math + domain types
bp-common = { workspace = true }
bp-pplns = { workspace = true }
bp-db = { workspace = true }
# Shared snapshot persistence + ledger row-type primitives (also used
# by bp-group-solo-engine — one source of truth for the wire formats).
bp-coinbase-snapshot = { workspace = true }
# Protocol-agnostic accepted-share hook surface. The SV1 and SV2
# Stratum servers project their native ShareAccept into the shared
# view via per-protocol adapters; we implement the shared trait once.
bp-share-hook = { workspace = true }
bp-inflight-cache = { workspace = true }
bp-cron-utils = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
# parking_lot::Mutex over std::sync::Mutex for the per-share touch-buffer
# lock: ~2× faster uncontended, no poisoning overhead.
parking_lot = { workspace = true }

# I/O backends — direct clients, no trait abstraction (decision 2026-05-16:
# tests run against docker-Redis analogous to docker-PG, no mock layer).
redis = { workspace = true }
sqlx = { workspace = true }

# Date/time — only for the daily 03:00 UTC sweep cron's `next_3am_utc` math.
chrono = { workspace = true }

# Observability + errors
tracing = { workspace = true }
thiserror = { workspace = true }

# Snapshot serialization (pplns:snapshot Redis hash fields are JSON-encoded
# arrays/maps mirroring the TS coinbase-snapshot.ts shape).
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
# Integration tests against docker-Redis need direct redis-rs access
# (for FLUSHDB / direct zset inspection).
redis = { workspace = true }
bp-common = { workspace = true }
bp-pplns = { workspace = true }
# E2E regtest deps — the distribution-build → coinbase → bitcoin-core
# acceptance pipeline test brings up a real bitcoin-node and wires
# the engine's payout list into a `MiningJob` for block submit.
bp-regtest-harness = { workspace = true }
bp-template-distribution = { workspace = true }
bp-mining-job = { workspace = true }
bp-share = { workspace = true }
bitcoin = { workspace = true }
bp-test-support = { workspace = true }
# T1 equivalence: drive the same engine sink via the Core→Satellite stream.
bp-share-stream = { workspace = true }
