[package]
name = "bp-share-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# The owned share record is the wire unit; it derives serde.
bp-share-hook = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# `sync` for the off-loop publish channel, `rt` for the drain-task spawn.
tokio = { workspace = true, features = ["sync", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
