[package]
name = "bp-share"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
hex = { workspace = true }
